Se crear todo el header de la plataforma

--- a/index.html
+++ b/index.html
@@ -3,9 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Travel Goods</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap" rel="stylesheet">
+    <link rel="icon" href="img/icono.ico" type="">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <header class="headerPrincipal">
+        <div class="container">
+            <h1 class="headerPrincipal-titulo" ><img src="img/logo.png"><a>Travel Goods</a></h1>
+            <nav class="headerPrincipal-nav">
+                <a class="headerPrincipal-nav-menu" href="#">INICIO</a>
+                <a class="headerPrincipal-nav-menu" href="#">PRODUCTOS</a>
+                <a class="headerPrincipal-nav-menu" href="#">CONTACTO</a>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
