--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
     </main>
 
     <footer>
-
+        <div>
+            <img src="img/logo.png" alt="">
+            <p class="footerDiv">&copy Copyright eCommerce Remington - 2024</p>
+        </div>
     </footer>
 </body>
 </html>
