--- a/index.html
+++ b/index.html
@@ -22,13 +22,15 @@
     </header>
 
     <main>
-
     </main>
 
-    <footer>
-        <div>
-            <img src="img/logo.png" alt="">
-            <p class="footerDiv">&copy Copyright eCommerce Remington - 2024</p>
+    <footer class="footerPrincipal"> 
+        <div class="footerPrincipal-container">
+            <img class="footerPrincipal-img" src="img/logo.png" alt="">
+            <p class="footerPrincipal-p">&copy Copyright eCommerce Remington - 2024</p>
+            <a class="footerPrincipal-text" href="#">Términos del servicio</a>
+            <a class="footerPrincipal-text" href="#">Política de privacidad</a>
+            <a class="footerPrincipal-text" href="https://maps.app.goo.gl/rBUfscbHRms64HSn8">Ubicacion</a>
         </div>
     </footer>
 </body>
