Cambios de estilos al footer, se inicia con el contenido de la pagina

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 <body>
     <header class="headerPrincipal">
         <div class="container">
-            <h1 class="headerPrincipal-titulo" ><img src="img/logo.png"><a>Travel Goods</a></h1>
+            <h1 class="headerPrincipal-titulo" >
+                <img src="img/logo.png" alt="Logo">
+                <a>Travel Goods</a>
+            </h1>
             <nav class="headerPrincipal-nav">
                 <a class="headerPrincipal-nav-menu" href="#">INICIO</a>
                 <a class="headerPrincipal-nav-menu" href="#">PRODUCTOS</a>
@@ -21,7 +24,13 @@
         </div>
     </header>
 
-    <main>
+    <main class="contenidoPrincipal">
+            <div>
+                <img src="img/Proyecto_nuevo.png" alt="">
+            </div>
+            <h2 class="contenidoPrincipal-subtitulo">Nuestros productos</h2>
+            <ul class="contenidoPrincipal-productos">
+            </ul>
     </main>
 
     <footer class="footerPrincipal"> 
