Se crea la lista de productos

--- a/index.html
+++ b/index.html
@@ -29,8 +29,24 @@
                 <img src="img/Proyecto_nuevo.png" alt="">
             </div>
             <h2 class="contenidoPrincipal-subtitulo">Nuestros productos</h2>
-            <ul class="contenidoPrincipal-productos">
-            </ul>
+            <nav>
+                <ul class="contenidoPrincipal-productos">
+                    <li class="listaProductos">Neck Wallet</li>
+                    <li class="listaProductos">Adaptador De Corriente Universal</li>
+                    <li class="listaProductos">Candados</li>
+                    <li class="listaProductos">Funda Impermeable</li>
+                    <li class="listaProductos">Cargador Portatil</li>
+                    <li class="listaProductos">Mochila De Viaje</li>
+                    <li class="listaProductos">Maletas De Viaje</li>
+                    <li class="listaProductos">Kit De Higiene Oral</li>
+                    <li class="listaProductos">Libro Electronico</li>
+                    <li class="listaProductos">Multi USB</li>
+                    <li class="listaProductos">Almohada De Viaje</li>
+                    <li class="listaProductos">Toalla de Manos</li>
+                    <li class="listaProductos">Protector Solar</li>
+                    <li class="listaProductos">Crema Humectante</li>
+                </ul>
+            </nav>
     </main>
 
     <footer class="footerPrincipal"> 
