Correccion de productos, se agregan en tarjetas

--- a/index.html
+++ b/index.html
@@ -24,28 +24,106 @@
         </div>
     </header>
 
-    <main class="contenidoPrincipal">
-            <div>
-                <img src="img/Proyecto_nuevo.png" alt="">
-            </div>
-            <h2 class="contenidoPrincipal-subtitulo">Nuestros productos</h2>
-            <nav>
-                <ul class="contenidoPrincipal-productos">
-                    <li class="listaProductos">Neck Wallet</li>
-                    <li class="listaProductos">Adaptador De Corriente Universal</li>
-                    <li class="listaProductos">Candados</li>
-                    <li class="listaProductos">Funda Impermeable</li>
-                    <li class="listaProductos">Cargador Portatil</li>
-                    <li class="listaProductos">Mochila De Viaje</li>
-                    <li class="listaProductos">Maletas De Viaje</li>
-                    <li class="listaProductos">Kit De Higiene Oral</li>
-                    <li class="listaProductos">Libro Electronico</li>
-                    <li class="listaProductos">Multi USB</li>
-                    <li class="listaProductos">Almohada De Viaje</li>
-                    <li class="listaProductos">Toalla de Manos</li>
-                    <li class="listaProductos">Protector Solar</li>
-                    <li class="listaProductos">Crema Humectante</li>
-                </ul>
+    <main>
+            <nav class="contenidoPrincipal">
+                <div>
+                    <img class="Portada" src="img/Proyecto_nuevo.png" alt="">
+                </div>
+                <h2 class="contenidoPrincipal-subtitulo">Nuestros productos</h2>
+            </nav>
+            <nav class="containersPrincipal">
+                <div class="containers">
+                    <div class="card">
+                        <figure>
+                            <img src="img/Producto/Neck Wallet.png" alt="">
+                        </figure>
+                        <div class="contenido">
+                            <h3>Neck Wallet</h3>
+                            <p>Descrip del producto</p>
+                            <a href="#">Comprar</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <figure>
+                            <img src="img/Producto/Funda Impermeable.png" alt="">
+                        </figure>
+                        <div class="contenido">
+                            <h3>Funda Impermeable</h3>
+                            <p>Descrip del producto</p>
+                            <a href="#">Comprar</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <figure>
+                            <img src="img/Producto/Cargador Portatil.png" alt="">
+                        </figure>
+                        <div class="contenido">
+                            <h3>Cargador Portatil</h3>
+                            <p>Descrip del producto</p>
+                            <a href="#">Comprar</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <figure>
+                            <img src="img/Producto/Mochila De Viaje.png" alt="">
+                        </figure>
+                        <div class="contenido">
+                            <h3>Mochila De Viaje</h3>
+                            <p>Descrip del producto</p>
+                            <a href="#">Comprar</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <figure>
+                            <img src="img/Producto/Maletas De Viaje.png" alt="">
+                        </figure>
+                        <div class="contenido">
+                            <h3>Maletas De Viaje</h3>
+                            <p>Descrip del producto</p>
+                            <a href="#">Comprar</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <figure>
+                            <img src="img/Producto/Kit De Higiene Oral.png" alt="">
+                        </figure>
+                        <div class="contenido">
+                            <h3>Kit De Higiene Oral</h3>
+                            <p>Descrip del producto</p>
+                            <a href="#">Comprar</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <figure>
+                            <img src="img/Producto/Libro Electronico.png" alt="">
+                        </figure>
+                        <div class="contenido">
+                            <h3>Libro Electronico</h3>
+                            <p>Descrip del producto</p>
+                            <a href="#">Comprar</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <figure>
+                            <img src="img/Producto/Multi USB.png" alt="">
+                        </figure>
+                        <div class="contenido">
+                            <h3>Multi USB</h3>
+                            <p>Descrip del producto</p>
+                            <a href="#">Comprar</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <figure>
+                            <img src="img/Producto/Toalla de Manos.png" alt="">
+                        </figure>
+                        <div class="contenido">
+                            <h3>Toalla de Manos</h3>
+                            <p>Descrip del producto</p>
+                            <a href="#">Comprar</a>
+                        </div>
+                    </div>
+                </div>
             </nav>
     </main>
 
