Cambio del modelo de productos

--- a/index.html
+++ b/index.html
@@ -103,22 +103,24 @@
                             <a href="#">Comprar</a>
                         </div>
                     </div>
-                    <div class="card">
-                        <figure>
-                            <img src="img/Producto/Multi USB.png" alt="">
-                        </figure>
-                        <div class="contenido">
-                            <h3>Multi USB</h3>
-                            <p>Descrip del producto</p>
-                            <a href="#">Comprar</a>
-                        </div>
-                    </div>
+                </div>
+                <div class="containers">
                     <div class="card">
                         <figure>
                             <img src="img/Producto/Toalla de Manos.png" alt="">
                         </figure>
                         <div class="contenido">
                             <h3>Toalla de Manos</h3>
+                            <p>Descrip del producto</p>
+                            <a href="#">Comprar</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <figure>
+                            <img src="img/Producto/Multi USB.png" alt="">
+                        </figure>
+                        <div class="contenido">
+                            <h3>Multi USB</h3>
                             <p>Descrip del producto</p>
                             <a href="#">Comprar</a>
                         </div>
