Se completa el listado de productos

--- a/index.html
+++ b/index.html
@@ -125,6 +125,56 @@
                             <a href="#">Comprar</a>
                         </div>
                     </div>
+                    <div class="card">
+                        <figure>
+                            <img src="img/Producto/Protector solar.png" alt="">
+                        </figure>
+                        <div class="contenido">
+                            <h3>Protector Solar</h3>
+                            <p>Descrip del producto</p>
+                            <a href="#">Comprar</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <figure>
+                            <img src="img/Producto/Chanclas.png" alt="">
+                        </figure>
+                        <div class="contenido">
+                            <h3>Chanclas</h3>
+                            <p>Descrip del producto</p>
+                            <a href="#">Comprar</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <figure>
+                            <img src="img/Producto/Tienda de acampar.png" alt="">
+                        </figure>
+                        <div class="contenido">
+                            <h3>Tienda De Acampar</h3>
+                            <p>Descrip del producto</p>
+                            <a href="#">Comprar</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <figure>
+                            <img src="img/Producto/Audifonos.png" alt="">
+                        </figure>
+                        <div class="contenido">
+                            <h3>Audifonos</h3>
+                            <p>Descrip del producto</p>
+                            <a href="#">Comprar</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <figure>
+                            <img src="img/Producto/Botiquin.png" alt="">
+                        </figure>
+                        <div class="contenido">
+                            <h3>Botiquin</h3>
+                            <p>Descrip del producto</p>
+                            <a href="#">Comprar</a>
+                        </div>
+                    </div>
                 </div>
             </nav>
     </main>
