--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             </h1>
             <nav class="headerPrincipal-nav">
                 <a class="headerPrincipal-nav-menu" href="#">INICIO</a>
-                <a class="headerPrincipal-nav-menu" href="#">PRODUCTOS</a>
-                <a class="headerPrincipal-nav-menu" href="#">CONTACTO</a>
+                <a class="headerPrincipal-nav-menu" href="#Productos">PRODUCTOS</a>
+                <a class="headerPrincipal-nav-menu" href="#Contacto">CONTACTO</a>
             </nav>
         </div>
     </header>
@@ -29,7 +29,7 @@
                 <div>
                     <img class="Portada" src="img/Proyecto_nuevo.png" alt="">
                 </div>
-                <h2 class="contenidoPrincipal-subtitulo">Nuestros productos</h2>
+                <h2 class="contenidoPrincipal-subtitulo" id="Productos">Nuestros productos</h2>
             </nav>
             <nav class="containersPrincipal">
                 <div class="containers">
@@ -176,6 +176,13 @@
                         </div>
                     </div>
                 </div>
+            </nav>
+            <h2 class="contenidoPrincipal-subtitulo" id="Contacto">Contactanos</h2>
+            <nav class="contacto">
+                <p><img src="img/Telefono.svg" alt="">018000410203</p>
+                <p><a href="mailto:david.samaniego.8520@miremington.edu.co"><img src="img/Email.svg" alt="">david.samaniego.8520@miremington.edu.co</a></p>
+                <p><a href="https://www.instagram.com/uniremingtonoficial/"><img src="img/Instagramsvg.svg" alt="">uniremingtonoficial</a></p>
+                <p><a href="https://wa.me/573208701818"><img src="img/Whatsapp.svg" alt="">3208701818</a></p>
             </nav>
     </main>
 
