--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <header class="headerPrincipal">
+    <header class="headerPrincipal" id="header">
         <div class="container">
             <h1 class="headerPrincipal-titulo" >
                 <img src="img/logo.png" alt="Logo">
@@ -21,9 +21,9 @@
                 <a class="headerPrincipal-nav-menu" href="#Productos">PRODUCTOS</a>
                 <a class="headerPrincipal-nav-menu" href="#Contacto">CONTACTO</a>
             </nav>
+            <a href="#"><img src="img/carrito.svg" alt=""></a>
         </div>
     </header>
-
     <main>
             <nav class="contenidoPrincipal">
                 <div>
@@ -32,15 +32,15 @@
                 <h2 class="contenidoPrincipal-subtitulo" id="Productos">Nuestros productos</h2>
             </nav>
             <nav class="containersPrincipal">
-                <div class="containers">
-                    <div class="card">
+                <div class="containers" id = "containers">
+                    <div class="card" id = "card">
                         <figure>
                             <img src="img/Producto/Neck Wallet.png" alt="">
                         </figure>
                         <div class="contenido">
-                            <h3>Neck Wallet</h3>
-                            <p>Descrip del producto</p>
-                            <a href="#">Comprar</a>
+                            <h3 id="nombreProducto">Neck Wallet</h3>
+                            <p id="precioProducto">Descrip del producto</p>
+                            <button id="comprar">Comprar</button>
                         </div>
                     </div>
                     <div class="card">
@@ -104,7 +104,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="containers">
+                <div class="containers" id = "containers">
                     <div class="card">
                         <figure>
                             <img src="img/Producto/Toalla de Manos.png" alt="">
@@ -177,6 +177,11 @@
                     </div>
                 </div>
             </nav>
+            <h2 class="contenidoPrincipal-subtitulo">Carrito</h2>
+            <div>
+                
+            </div>
+            
             <h2 class="contenidoPrincipal-subtitulo" id="Contacto">Contactanos</h2>
             <nav class="contacto">
                 <p><img src="img/Telefono.svg" alt="">018000410203</p>
@@ -195,5 +200,6 @@
             <a class="footerPrincipal-text" href="https://maps.app.goo.gl/rBUfscbHRms64HSn8">Ubicacion</a>
         </div>
     </footer>
+    <script src="index.js"></script>
 </body>
 </html>
