Se agrega la funcion de carro de compra

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <header class="headerPrincipal" id="header">
+    <header class="headerPrincipal">
         <div class="container">
             <h1 class="headerPrincipal-titulo" >
                 <img src="img/logo.png" alt="Logo">
@@ -29,18 +29,18 @@
                 <div>
                     <img class="Portada" src="img/Proyecto_nuevo.png" alt="">
                 </div>
-                <h2 class="contenidoPrincipal-subtitulo" id="Productos">Nuestros productos</h2>
+                <h2 class="contenidoPrincipal-subtitulo">Nuestros productos</h2>
             </nav>
             <nav class="containersPrincipal">
-                <div class="containers" id = "containers">
-                    <div class="card" id = "card">
+                <div class="containers">
+                    <div class="card">
                         <figure>
                             <img src="img/Producto/Neck Wallet.png" alt="">
                         </figure>
                         <div class="contenido">
-                            <h3 id="nombreProducto">Neck Wallet</h3>
-                            <p id="precioProducto">Descrip del producto</p>
-                            <button id="comprar">Comprar</button>
+                            <h3>Neck Wallet</h3>
+                            <p>50000</p>
+                            <a href="#" class="boton" data-id="1">Comprar</a>
                         </div>
                     </div>
                     <div class="card">
@@ -49,8 +49,8 @@
                         </figure>
                         <div class="contenido">
                             <h3>Funda Impermeable</h3>
-                            <p>Descrip del producto</p>
-                            <a href="#">Comprar</a>
+                            <p>20000</p>
+                            <a href="#" class="boton" data-id="2">Comprar</a>
                         </div>
                     </div>
                     <div class="card">
@@ -59,8 +59,8 @@
                         </figure>
                         <div class="contenido">
                             <h3>Cargador Portatil</h3>
-                            <p>Descrip del producto</p>
-                            <a href="#">Comprar</a>
+                            <p>60000</p>
+                            <a href="#" class="boton" data-id="3">Comprar</a>
                         </div>
                     </div>
                     <div class="card">
@@ -69,8 +69,8 @@
                         </figure>
                         <div class="contenido">
                             <h3>Mochila De Viaje</h3>
-                            <p>Descrip del producto</p>
-                            <a href="#">Comprar</a>
+                            <p>120000</p>
+                            <a href="#" class="boton" data-id="4">Comprar</a>
                         </div>
                     </div>
                     <div class="card">
@@ -79,8 +79,8 @@
                         </figure>
                         <div class="contenido">
                             <h3>Maletas De Viaje</h3>
-                            <p>Descrip del producto</p>
-                            <a href="#">Comprar</a>
+                            <p>250000</p>
+                            <a href="#" class="boton" data-id="5">Comprar</a>
                         </div>
                     </div>
                     <div class="card">
@@ -89,8 +89,8 @@
                         </figure>
                         <div class="contenido">
                             <h3>Kit De Higiene Oral</h3>
-                            <p>Descrip del producto</p>
-                            <a href="#">Comprar</a>
+                            <p>15000</p>
+                            <a href="#" class="boton" data-id="6">Comprar</a>
                         </div>
                     </div>
                     <div class="card">
@@ -99,20 +99,20 @@
                         </figure>
                         <div class="contenido">
                             <h3>Libro Electronico</h3>
-                            <p>Descrip del producto</p>
-                            <a href="#">Comprar</a>
+                            <p>300000</p>
+                            <a href="#" class="boton" data-id="7">Comprar</a>
                         </div>
                     </div>
                 </div>
-                <div class="containers" id = "containers">
+                <div class="containers">
                     <div class="card">
                         <figure>
                             <img src="img/Producto/Toalla de Manos.png" alt="">
                         </figure>
                         <div class="contenido">
                             <h3>Toalla de Manos</h3>
-                            <p>Descrip del producto</p>
-                            <a href="#">Comprar</a>
+                            <p>25000</p>
+                            <a href="#" class="boton" data-id="8">Comprar</a>
                         </div>
                     </div>
                     <div class="card">
@@ -121,8 +121,8 @@
                         </figure>
                         <div class="contenido">
                             <h3>Multi USB</h3>
-                            <p>Descrip del producto</p>
-                            <a href="#">Comprar</a>
+                            <p>45000</p>
+                            <a href="#" class="boton" data-id="9">Comprar</a>
                         </div>
                     </div>
                     <div class="card">
@@ -131,8 +131,8 @@
                         </figure>
                         <div class="contenido">
                             <h3>Protector Solar</h3>
-                            <p>Descrip del producto</p>
-                            <a href="#">Comprar</a>
+                            <p>20000</p>
+                            <a href="#" class="boton" data-id="10">Comprar</a>
                         </div>
                     </div>
                     <div class="card">
@@ -141,8 +141,8 @@
                         </figure>
                         <div class="contenido">
                             <h3>Chanclas</h3>
-                            <p>Descrip del producto</p>
-                            <a href="#">Comprar</a>
+                            <p>30000</p>
+                            <a href="#" class="boton" data-id="11">Comprar</a>
                         </div>
                     </div>
                     <div class="card">
@@ -151,8 +151,8 @@
                         </figure>
                         <div class="contenido">
                             <h3>Tienda De Acampar</h3>
-                            <p>Descrip del producto</p>
-                            <a href="#">Comprar</a>
+                            <p>90000</p>
+                            <a href="#" class="boton" data-id="12">Comprar</a>
                         </div>
                     </div>
                     <div class="card">
@@ -161,8 +161,8 @@
                         </figure>
                         <div class="contenido">
                             <h3>Audifonos</h3>
-                            <p>Descrip del producto</p>
-                            <a href="#">Comprar</a>
+                            <p>350000</p>
+                            <a href="#" class="boton" data-id="13">Comprar</a>
                         </div>
                     </div>
                     <div class="card">
@@ -171,18 +171,17 @@
                         </figure>
                         <div class="contenido">
                             <h3>Botiquin</h3>
-                            <p>Descrip del producto</p>
-                            <a href="#">Comprar</a>
+                            <p>5000</p>
+                            <a href="#" class="boton" data-id="14">Comprar</a>
                         </div>
                     </div>
                 </div>
             </nav>
             <h2 class="contenidoPrincipal-subtitulo">Carrito</h2>
-            <div>
-                
+            <div class="carritoContainer"> 
             </div>
-            
-            <h2 class="contenidoPrincipal-subtitulo" id="Contacto">Contactanos</h2>
+            <h2>Total: <strong class="precioTotal"></strong></h2> 
+            <h2 class="contenidoPrincipal-subtitulo">Contactanos</h2>
             <nav class="contacto">
                 <p><img src="img/Telefono.svg" alt="">018000410203</p>
                 <p><a href="mailto:david.samaniego.8520@miremington.edu.co"><img src="img/Email.svg" alt="">david.samaniego.8520@miremington.edu.co</a></p>
