Fianlizacion de la primera etapa de desarollo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a class="headerPrincipal-nav-menu" href="#Productos">PRODUCTOS</a>
                 <a class="headerPrincipal-nav-menu" href="#Contacto">CONTACTO</a>
             </nav>
-            <a href="#"><img src="img/carrito.svg" alt=""></a>
+            <a href="#Carrito"><img src="img/carrito.svg" alt=""></a>
         </div>
     </header>
     <main>
@@ -29,7 +29,7 @@
                 <div>
                     <img class="Portada" src="img/Proyecto_nuevo.png" alt="">
                 </div>
-                <h2 class="contenidoPrincipal-subtitulo">Nuestros productos</h2>
+                <h2 class="contenidoPrincipal-subtitulo" id="Productos">Nuestros productos</h2>
             </nav>
             <nav class="containersPrincipal">
                 <div class="containers">
@@ -177,11 +177,11 @@
                     </div>
                 </div>
             </nav>
-            <h2 class="contenidoPrincipal-subtitulo">Carrito</h2>
+            <h2 class="contenidoPrincipal-subtitulo" id="Carrito">Carrito</h2>
             <div class="carritoContainer"> 
             </div>
-            <h2>Total: <strong class="precioTotal"></strong></h2> 
-            <h2 class="contenidoPrincipal-subtitulo">Contactanos</h2>
+            <h2 class="total">Total: <strong class="precioTotal"></strong></h2> 
+            <h2 class="contenidoPrincipal-subtitulo" id="Contacto">Contactanos</h2>
             <nav class="contacto">
                 <p><img src="img/Telefono.svg" alt="">018000410203</p>
                 <p><a href="mailto:david.samaniego.8520@miremington.edu.co"><img src="img/Email.svg" alt="">david.samaniego.8520@miremington.edu.co</a></p>
